--- a/SiteStyle/global.css
+++ b/SiteStyle/global.css
@@ -2,11 +2,43 @@
 /*
     StopDogeHate.org Global Style Settings
 */
+/* Theme */
+@media (prefers-color-scheme: dark) {
+    main {
+        background-color: #2f3032;
+        color: white;
+    }
+    a:before {
+        color:lightblue;
+    }
+    a:hover:before {
+        color:lightblue;
+    }
+    a:visited {
+        color:lightblue;
+    }
+}
 
+@media (prefers-color-scheme: light) {
+    main {
+        background-color: white;
+        color: black;
+    }
+    a:before {
+        color:blue;
+    }
+    a:hover:before {
+        color:blue;
+    }
+    a:visited {
+        color:blue;
+    }
+}
 /* General Content */
 body {
-    min-width:683px;
     
+    min-width:683px;
+
     background: url("../Images/dogebackgroundsection.jpg");
     background-size: 100%;
     color: white;
@@ -15,25 +47,30 @@ body {
     margin: 0;
 }
 
-main {
-    
-     position: relative;
+#floatingContent {
+
+    position: relative;
     top: 90vh;
     left: 0;
     right: 0; 
     margin: 0 auto;
     width: 90%;
-/*    height: 100px;*/
+}
 
+main {
+    padding: 30px;
+}
+
+footer {
     padding: 20px;
-    background-color: white;
-    color: black;
-/*    text-align: center;*/
+    text-align: center;
+    color: white;
+    padding-bottom: 50px;
 }
 
 h3 {
-    font-size:150%;
-    text-decoration: underline;
+    font-size:135%;
+    font-style: italic;
 }
 
 p {
@@ -45,7 +82,7 @@ ol {
 }
 
 li {
-    font-size:200%;
+    font-size:125%;
 }
 /* Page Header and Navbar*/
 header {
@@ -55,6 +92,7 @@ header {
     right:0;
     top: 10px;
     width: 95%;
+    height: 8vh;
     margin: 0 auto;
     background: rgba(0,0,0,0.75);
     display: flex;
@@ -66,13 +104,10 @@ header {
 #headerTitle {
     font-size: 1.8vw;
 }
-@media screen and (max-width: 683px) { /*sets the min-width for the title because im using vw */
-    #headerTitle {
-        font-size: 12px;
-    }
-}
+
 #headerLogo {
-    width:5%
+    
+    height: 100%;
 }
 nav {
     position:absolute;
@@ -85,27 +120,37 @@ nav a {
     position: relative;
     margin-left: 2.5%;
     margin-right: 2.5%;
+    font-size: calc(5px + 1.2vw);
 }
 nav a:before {
-  color:white;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #FFF;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
+    color:white;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #FFF;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
 }
 nav a:hover:before {
-  color:white;
-  visibility: visible;
-  transform: scaleX(1);
+    color:white;
+    visibility: visible;
+    transform: scaleX(1);
 }
 nav a:visited {
     color:white;
+}
+@media screen and (max-width: 683px) { /*sets the min-width for the title because im using vw */
+    #headerTitle {
+        font-size: 12px;
+    }
+    nav a {
+    
+        font-size: 15px;
+    }
 }
 /* background */
 #background-top {
